Revert "Changed the sizes"
This reverts commit 54fd75b8a101e8b880ac750aba9cb686d039859c.

--- a/app/views/enrollments/show.html.erb
+++ b/app/views/enrollments/show.html.erb
@@ -1,5 +1,3 @@
-<br>
-<br>
 <%= link_to tr('edit'), edit_enrollment_path(@enrollment) %> ::
 <%= link_to tr('home'), {controller: :welcome, action: :index} %> ::
 <%= link_to tr('child'), @enrollment.child %>
@@ -36,50 +34,33 @@
 
 <p>
   <strong><%= tr("newyear_shirt_size") %>:</strong>
-  <%= tr(Enrollment.code_to_cloth_sizes(@enrollment.newyear_shirt_size)[0]) + " " + Enrollment.code_to_cloth_sizes(@enrollment.newyear_shirt_size)[1] %>
+  <%= Enrollment.code_to_shirt_sizes(self)[@enrollment.newyear_shirt_size] %>
 </p>
-
 
 <p>
   <strong><%= tr("newyear_pant_size") %>:</strong>
-  <%= tr(Enrollment.code_to_cloth_sizes(@enrollment.newyear_pant_size)[0]) + " " + Enrollment.code_to_cloth_sizes(@enrollment.newyear_pant_size)[1] %>
+  <%= Enrollment.code_to_pant_sizes(self)[@enrollment.newyear_pant_size] %>
 </p>
 
 <p>
   <strong><%= tr("newyear_shoe_size") %>:</strong>
-  <%= tr(Enrollment.code_to_cloth_sizes(@enrollment.newyear_shoe_size)[0]) + " " + Enrollment.code_to_cloth_sizes(@enrollment.newyear_shoe_size)[1] %>
+  <%= Enrollment.code_to_shoe_sizes(self)[@enrollment.newyear_shoe_size] %>
 </p>
 
 <p>
   <strong><%= tr("midyear_shirt_size") %>:</strong>
-  <%= tr(Enrollment.code_to_cloth_sizes(@enrollment.midyear_shirt_size)[0]) + " " + Enrollment.code_to_cloth_sizes(@enrollment.midyear_shirt_size)[1] %>
+  <%= Enrollment.code_to_shirt_sizes(self)[@enrollment.midyear_shirt_size] %>
 </p>
 
 <p>
   <strong><%= tr("midyear_pant_size") %>:</strong>
-  <%= tr(Enrollment.code_to_cloth_sizes(@enrollment.midyear_pant_size)[0]) + " " + Enrollment.code_to_cloth_sizes(@enrollment.midyear_pant_size)[1] %>
+  <%= Enrollment.code_to_pant_sizes(self)[@enrollment.midyear_pant_size] %>
 </p>
 
 <p>
   <strong><%= tr("midyear_shoe_size") %>:</strong>
-  <%= tr(Enrollment.code_to_cloth_sizes(@enrollment.midyear_shoe_size)[0]) + " " + Enrollment.code_to_cloth_sizes(@enrollment.midyear_shoe_size)[1] %>
+  <%= Enrollment.code_to_shoe_sizes(self)[@enrollment.midyear_shoe_size] %>
 </p>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 <p>
   <strong><%= tr("newyear_attendance") %>:</strong>
@@ -152,5 +133,3 @@
   <p class="notes"><%= @enrollment.notes %></p>
   <% end %>
 </p>
-<br>
-<br>
