--- a/app/views/families/show.html.erb
+++ b/app/views/families/show.html.erb
@@ -1,4 +1,3 @@
-<br>
 <%= link_to tr('edit'), edit_family_path(@family) %> ::
 <%= link_to tr('home'), {controller: :welcome, action: :index} %> ::
 <%= link_to tr('community'), @community %>
@@ -165,10 +164,7 @@
         <% end %>
         <td><%= Child::code_to_gender(self)[child.gender] %></td>
         <td><%= link_to tr('show'), child %></td>
-        <td class="quick_edit" data-child-id="<%=child.id%>"><a><%= tr('quick_edit') %></a>
-
-		
-		</td>
+        <td class="quick_edit" data-child-id="<%=child.id%>"><a><%= tr('quick_edit') %></a></td>
         <td><%= link_to tr('new_enrollment'), {controller: :enrollments, action: :new, child_id: child.id} %></td>
       </tr>
     <% end %>
